# app-center-ratings

./: .env_test  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  HACKING.md  Makefile  Makefile.toml  README.md  TODO  build.rs  docker-compose.yml  env_example  example.env  rockcraft.yaml
.env_files/: example.env  test-server.env  test.env
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-and-test.yaml  build-charm.yaml  build-rock.yaml  build.yaml  check-build-publish.yaml  ci.yaml  cla.yaml  conventional-commits.yaml  lints.yaml  pull-request-charm.yaml  pull-request.yaml  push-charm.yaml  push.yaml
crates/ratings/: Cargo.toml  build.rs
crates/ratings/src/: lib.rs  main.rs
crates/ratings/tests/: voting.rs
crates/ratings_new/: Cargo.toml  build.rs
crates/ratings_new/proto/: ratings.features.chart.rs  ratings_features_chart.proto
crates/ratings_new/sql/migrations/: 20230829085908_ratings_init.down.sql
crates/ratings_new/src/: auth.rs  config.rs  context.rs  lib.rs  main.rs
crates/ratings_new/src/db/: categories.rs  migrator.rs  mod.rs  user.rs  vote.rs
crates/ratings_new/src/grpc/: app.rs  charts.rs  mod.rs  user.rs
crates/ratings_new/src/proto/: mod.rs
crates/ratings_new/src/ratings/: categories.rs  mod.rs  rating.rs  users.rs  votes.rs
crates/ratings_new/src/utils/: config.rs  migrator.rs  mod.rs
crates/ratings_new/tests/: clear-db.sql  voting.rs
crates/ratings_new/tests/common/: mod.rs
docker/database/: Dockerfile  init.sh
docker/prod/: Dockerfile
docker/ratings/: Dockerfile
docker/server/: Dockerfile
k8s_operator/: README.md  metadata.yaml  pyproject.toml  requirements.txt
k8s_operator/lib/ratings_api/: ratings_features_chart_pb2_grpc.py  ratings_features_user_pb2.py
mock_server/: Cargo.toml
mock_server/src/: main.rs
operator/: README.md  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
operator/lib/ratings_api/: ratings_features_app_pb2.py  ratings_features_chart_pb2.py  ratings_features_user_pb2_grpc.py
operator/src/: charm.py  database.py  ratings.py
operator/tests/integration/: ratings_features_user_pb2.py  ratings_features_user_pb2_grpc.py  test_charm.py
operator/tests/unit/: test_charm.py  test_ratings.py
proto/: ratings_feature_app.proto  ratings_feature_chart.proto  ratings_feature_register.proto  ratings_feature_user.proto  ratings_feature_user_no_auth.proto  ratings_features_app.proto  ratings_features_chart.proto  ratings_features_user.proto
scripts/: provision-database.md
snap/: README.md  snapcraft.yaml
snap/hooks/: configure
snap/local/: ratings_wrapper
sql/: init.sql  teardown.sql
sql/bootstrap/: roles.down.sql  roles.up.sql
sql/migrations/: 20230829085908_ratings_init.down.sql  20230829085908_ratings_init.up.sql  20240208071037_categories.up.sql
src/: config.rs  context.rs  jwt.rs  lib.rs  main.rs  middleware.rs  warmup.rs
src/admin/: mod.rs
src/app/: app.rs  context.rs  infrastructure.rs  interfaces.rs  middleware.rs  mod.rs  run.rs
src/app/interfaces/: authentication.rs  errors.rs  interfaces.rs  middleware.rs  mod.rs  routes.rs
src/db/: categories.rs  user.rs  vote.rs
src/feature/: mod.rs
src/feature/app/: mod.rs
src/feature/chart/: mod.rs
src/feature/register/: infrastructure.rs  interface.rs  mod.rs  service.rs  use_cases.rs
src/feature/user/: errors.rs  infrastructure.rs  interface.rs  mod.rs  service.rs
src/feature/user_no_auth/: mod.rs
src/features/: mod.rs  pb.rs
src/features/admin/: mod.rs
src/features/app/: entities.rs  errors.rs  infrastructure.rs  interface.rs  mod.rs  service.rs  use_cases.rs
src/features/chart/: entities.rs  errors.rs  infrastructure.rs  interface.rs  mod.rs  service.rs  use_cases.rs
src/features/common/: entities.rs  mod.rs
src/features/get_rating/: infrastructure.rs  interface.rs  use_cases.rs
src/features/rating/: infrastructure.rs  interface.rs  mod.rs  service.rs
src/features/user/: entities.rs  errors.rs  infrastructure.rs  interface.rs  mod.rs  service.rs  use_cases.rs
src/grpc/: app.rs  charts.rs  mod.rs  user.rs
src/proto/: ratings.features.app.rs  ratings.features.chart.rs  ratings.features.common.rs  ratings.features.user.rs
src/ratings/: categories.rs  charts.rs  mod.rs  rating.rs
src/service/: app.rs  auth.rs  mod.rs  multiplex_service.rs
src/utils/: config.rs  env.rs  infrastructure.rs  jwt.rs  log.rs  log_util.rs  migrator.rs  mod.rs  warmup.rs
src/vote/: interface.rs  mod.rs  service.rs
tests/: api_info.rs  authentication.rs  chart.rs  feature_chart.rs  feature_register.rs  feature_user_no_auth_register.rs  health_check.rs  log_level.rs  mod.rs  pb.rs  quick.rs  rating.rs  register.rs  user.rs  user_reject_invalid_logins_test.rs  user_reject_invalid_register_test.rs  user_simple_lifecycle_test.rs  voting.rs
tests/app_tests/: lifecycle_test.rs
tests/chart_tests/: category.rs  lifecycle_test.rs
tests/clients/: register.rs  user.rs
tests/common/: mod.rs
tests/features/: chart.feature  voting.feature
tests/features/admin/: api-info.feature
tests/helpers/: assert.rs  client_app.rs  client_chart.rs  client_user.rs  data_faker.rs  env.rs  hooks.rs  infrastructure.rs  mod.rs  repo_user.rs  test_data.rs  vote_generator.rs  with_lifecycle.rs
tests/helpers/client/: api_info.rs  log_level.rs  mod.rs
tests/old/: chart.rs
tests/old/helpers/: assert.rs
tests/user_tests/: category.rs  double_authenticate_test.rs  get_votes_lifecycle_test.rs  reject_invalid_register_test.rs  simple_lifecycle_test.rs
tests/utils/: after_test.rs  assert.rs  before_test.rs  mod.rs
vm_operator/: README.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  requirements.txt  tox.ini
vm_operator/lib/ratings_api/: ratings_features_app_pb2_grpc.py  ratings_features_user_pb2.py  ratings_features_user_pb2_grpc.py
vm_operator/src/: charm.py  ratings.py
vm_operator/templates/: ratings-service.j2
vm_operator/tests/functional/: test_ratings.py
vm_operator/tests/integration/: conftest.py  test_charm.py
vm_operator/tests/unit/: test_charm.py
(+61 files in other folders)
