[package]
name = "ratings"
description = "Backend for ratings for the Ubuntu app center."
license = "GPL-3.0-only"
authors = ["Canonical"]
version = "0.2.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
convert_case = "0.6.0"
dotenv = "0.15"
envy = "0.4"
futures = "0.3"
http = "1.0"
hyper = { version = "0.14", features = ["full", "backports", "deprecated"] }
jsonwebtoken = "9.2"
once_cell = "1.19"
prost = "0.12"
prost-types = "0.12"
rand = "0.8"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
snapd = { git = "https://github.com/ZoopOTheGoop/snapd-rs", branch = "framework" }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
] }
thiserror = "1.0"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1.36", features = ["full"] }
tokio-postgres = "0.7"
tonic = "0.10"
tonic-reflection = "0.10"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }
