[package]
name = "ratings"
description = "Ubuntu App Center ratings service"
license = "GPL-3.0-only"
authors = ["Canonical"]
version = "0.0.3"
edition = "2021"

[dependencies]
dotenvy = "0.15"
envy = "0.4"
futures = "0.3"
http = "1.0"
http-body = "0.4.6"
hyper = { version = "0.14", features = ["full", "backports", "deprecated"] }
jsonwebtoken = "9.2"
once_cell = "1.19"
prost = "0.12"
prost-types = "0.12"
rand = "0.8"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
snapd = { git = "https://github.com/ZoopOTheGoop/snapd-rs", branch = "framework" }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
] }
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1.36", features = ["full"] }
tokio-postgres = "0.7"
tonic = "0.10"
tonic-reflection = "0.10"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }

[dev-dependencies]
cucumber = { version = "0.20.2", features = ["libtest", "tracing"] }

[[test]]
name = "voting"
harness = false

[[test]]
name = "authentication"
harness = false

[[test]]
name = "chart"
harness = false
