[package]
name = "ratings"
description = "Ubuntu App Center ratings service"
license = "GPL-3.0-only"
authors = ["Canonical"]
version = "0.0.3"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.6.20" # this *must* be pinned because 0.7.x relies on hyper 1.x causing a ton of type conversion issues
base64 = "0.22.0"
chrono = { version = "0.4.34", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
dotenvy = "0.15"
envy = "0.4"
futures = "0.3"
http = "1.0"
http-body = "0.4.6"
hyper = { version = "0.14", features = ["full", "backports", "deprecated"] }
jsonwebtoken = "9.2"
log = { version = "0.4.21", features = ["serde"] }
once_cell = "1.19"
prost = "0.12"
prost-types = "0.12"
rand = "0.8"
reqwest = "0.12"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
snapd = { git = "https://github.com/ZoopOTheGoop/snapd-rs", branch = "framework" }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1.36", features = ["full"] }
tokio-postgres = "0.7"
tonic = "0.12"
tonic-reflection = "0.10"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
[build-dependencies]
git2 = { version = "0.18.2", default-features = false }
tonic-build = { version = "0.11", features = ["prost"] }

[dev-dependencies]
cucumber = { version = "0.20.2", features = ["libtest", "tracing"] }
lazy_static = "1.4.0"
regex = "1.10.3"
serde_json = "1.0.114"


[[test]]
name = "voting"
harness = false

[[test]]
name = "authentication"
harness = false

[[test]]
name = "chart"
harness = false

[[test]]
name = "log_level"
harness = false

[[test]]
name = "api_info"
harness = false
