[package]
name = "ratings_new"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
prost = "0.13.3"
prost-types = "0.13.3"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }
thiserror = "1.0.64"
tokio = "1.40.0"
tonic = "0.12.2"
tonic-reflection = "0.12.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
simple_test_case = "1.2.0"

[build-dependencies]
git2 = { version = "0.18.2", default-features = false }
tonic-build = { version = "0.11", features = ["prost"] }
